add courses create route and view
Co-authored-by: Shannon Lee <shannonleehj@gmail.com>
Co-authored-by: Cat Denton <cat.denton.dev@gmail.com>

--- a/UniRegistrar/Views/Courses/Index.cshtml
+++ b/UniRegistrar/Views/Courses/Index.cshtml
@@ -15,7 +15,7 @@
 <ul>
   @foreach(Course course in Model)
   {
-    <li>@Html.ActionLink($"{course.CourseName}","Details", new { id = course.CourseId })</li>
+    <li>@Html.ActionLink($"{course.CourseNumber} {course.CourseName}","Details", new { id = course.CourseId })</li>
   }
 </ul>
 
