--- a/UniRegistrar/Views/Courses/Details.cshtml
+++ b/UniRegistrar/Views/Courses/Details.cshtml
@@ -17,7 +17,7 @@
 <ul>
   @foreach (var join in Model.JoinEntities)
   {
-    <li>@Html.ActionLink($"{join.Student.StudentName}","Details","Student", new {id = join.Student.StudentId})</li>
+    <li>@Html.ActionLink($"{join.Student.StudentName}","Details","Students", new {id = join.Student.StudentId})</li>
   }
 </ul>
 
