--- a/UniRegistrar/Views/Students/Create.cshtml
+++ b/UniRegistrar/Views/Students/Create.cshtml
@@ -9,23 +9,30 @@
 @using (Html.BeginForm())
 {
   @Html.Label("Name")
-  @Html.TextBoxFor(model => model.StudentName)
+  @Html.TextBoxFor(model => model.StudentName,  new { @class = "form-control"})
 
   @Html.Label("Enrollment date")
-  @Html.TextBoxFor(model => model.EnrollmentDate)
+  @Html.TextBoxFor(model => model.EnrollmentDate, new { @type = "date", @class = "form-control datepicker" })
 
-  @Html.TextBoxFor("CourseId")
+  @Html.Label("Select Course Name")
+  @Html.DropDownList("CourseId")
+
+
+
+  
   @* @Html.Label("Select courses to enroll in")
   for (var i = 0; i < ViewBag.CourseList.Count; i++)
   {
 
   }  *@
-  @foreach(var course in ViewBag.Courseid)
+  @* @foreach(var course in ViewBag.Courseid)
   {
     @Html.DisplayFor(course.CourseId)
     <input type="checkbox"
       value="course.CourseId" name="course.CourseId" id="course.CourseId">
-  }
+  } *@
 
   <input type="submit" value="Complete registration" class="btn btn-default" />
 }
+
+<p>@Html.ActionLink("Back to Student Directory", "Index")</p>
