--- a/UniRegistrar/Views/Students/Details.cshtml
+++ b/UniRegistrar/Views/Students/Details.cshtml
@@ -20,6 +20,11 @@ else
     @foreach(var join in Model.JoinEntities)
     {
       <li>@join.Course.CourseName</li>
+      @using (Html.BeginForm("DeleteCourse", "Students"))
+      {
+        @Html.Hidden("joinId", @join.CourseStudentId)
+        <input type="submit" value="Delete Course" />
+      }
     }
   </ul>
 }
