create department table and appropriate views, make form fields required
Co-authored-by: Shannon Lee <shannonleehj@gmail.com>
Co-Authored-by: Salim Mayan <mailsalim@gmail.com>

--- a/UniRegistrar/Views/Courses/Create.cshtml
+++ b/UniRegistrar/Views/Courses/Create.cshtml
@@ -8,13 +8,16 @@
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.CourseName)
-  @Html.TextBoxFor(model => model.CourseName)
+  @Html.TextBoxFor(model => model.CourseName, new { @class = "form-control", required = "required"})
 
   @Html.LabelFor(model => model.CourseNumber)
-  @Html.TextBoxFor(model => model.CourseNumber)
+  @Html.TextBoxFor(model => model.CourseNumber, new { @class = "form-control", required = "required"})
 
   @Html.LabelFor(model => model.CourseDescription)
-  @Html.TextBoxFor(model => model.CourseDescription)
+  @Html.TextBoxFor(model => model.CourseDescription, new { @class = "form-control", required = "required"})
+
+  @Html.Label("Select Department")
+  @Html.DropDownList("DepartmentId")
 
   <input type="submit" value="Add a new course" />
 }
