--- a/UniRegistrar/Views/Home/Index.cshtml
+++ b/UniRegistrar/Views/Home/Index.cshtml
@@ -7,4 +7,5 @@
 <ul class="menu-links">
   <li>@Html.ActionLink("Student directory","Index","Students")</li>
   <li>@Html.ActionLink("Course catalog","Index","Courses")</li>
+  <li>@Html.ActionLink("Departments","Index","Departments")</li>
 </ul>
