--- a/UniRegistrar/Views/Courses/Index.cshtml
+++ b/UniRegistrar/Views/Courses/Index.cshtml
@@ -20,6 +20,7 @@
 </ul>
 
 <ul class = "menu-links">
+  <li>@Html.ActionLink("Search for courses", "Search")</li>
   <li>@Html.ActionLink("Add new course", "Create")</li>
   <li>@Html.ActionLink("Home","Index","Home")</li>
 </ul>
