add link to search courses route

--- a/UniRegistrar/Views/Home/Index.cshtml
+++ b/UniRegistrar/Views/Home/Index.cshtml
@@ -42,6 +42,9 @@
   <li>@Html.ActionLink("Departments","Index","Departments")</li>
 </ul>
 
+<ul class="menu-links">
+  <li>@Html.ActionLink("Search for courses","Search","Courses")</li>
+</ul>
 
 
 
